link de submissão sem overflow

--- a/estudantes/templates/estudantes/submissao_documento.html
+++ b/estudantes/templates/estudantes/submissao_documento.html
@@ -22,25 +22,37 @@
 
     Projeto: {{projeto.get_titulo}}<br><br>
 
-        {% for item in itens %}
-          <b>{{item.0}}</b>: <a 
-            data-toggle="tooltip" data-html="true" animation="true" title="Adicionar documento"
-            class="open-documento"
-            href="{% url 'adiciona_documento' projeto.organizacao.id projeto.id item.1 %}"
-            data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id item.1 %}"><b>&#10133;</b>
-          </a><br><ul>
-          {% for documento in item.2 %}
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue">
-              <li style="list-style-type:'&#128463; ';"> {{documento}} [{{documento.data}}]</li>
-            </a>
-          {% empty %}
-            Não entregue
-          {% endfor %} 
-          </ul>
-          <br>
-        {% endfor %} 
-
-
+    {% for item in itens %}
+      <b>{{item.0}}</b>: <a 
+        data-toggle="tooltip" data-html="true" animation="true" title="Adicionar documento"
+        class="open-documento"
+        href="{% url 'adiciona_documento' projeto.organizacao.id projeto.id item.1 %}"
+        data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id item.1 %}"><b>&#10133;</b>
+      </a><br><ul style="padding-left: 22px; width: fit-content;">
+      {% for documento in item.2 %}
+        <li style="list-style-type:'&#128463; ';">
+        {% if documento.documento and documento.link %}
+          {{documento.data}} - {{documento}}
+          <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue" 
+             href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+          <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue" 
+             href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+        {% else %}
+          {% if documento.documento %}
+            <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
+               href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
+          {% endif %}
+          {% if documento.link %}
+            <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
+               href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
+          {% endif %}
+        {% endif %}
+        </li>
+      {% empty %}
+        Não entregue
+      {% endfor %} 
+      </ul><br>
+    {% endfor %} 
 
     {% include "documento-modal.html" %}
 
