--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -208,6 +208,7 @@ table, th, td {
   padding:7px 24px;
   text-decoration:none;
   text-shadow:0px 1px 0px #810e05;
+  margin-bottom: 6px;
 }
 .myButton:hover {
   background-color:#c62d1f;
@@ -225,6 +226,9 @@ table, th, td {
     font-size: 21px;
     display: block;
     padding-bottom: 0.15em;  
+  }
+  h3 {
+    font-size: 1.17em;
   }
 }
 
