--- a/users/templates/users/estudantes_objetivos.html
+++ b/users/templates/users/estudantes_objetivos.html
@@ -39,7 +39,7 @@
                 </a>
               </th>
               {% for objetivo in objetivos %}
-                <th scope="col" class="text-center">{{objetivo}}</th>
+                <th scope="col" class="text-center">{{objetivo.titulo}}</th>
               {% endfor %}
           </tr>
           </thead>
