colocando só onde precisa o pulsa texto

--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -16,6 +16,8 @@
     }
   </style>
 
+  <script type="text/javascript" src="{% static 'js/pfe_pulsa_texto.js' %}"></script>
+
   {% comment %} Para o gráfico no final da página {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
