--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -88,7 +88,7 @@
         <thead class="table-info">
         <tr>
           <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Algum professor autorizou que o projeto seja publicado para os estudantes"><span id="autorizado-icon"></span></th>
-          <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="A proposta se encontra disponível para os alunos aplicarem"><span id="disponivel-icon"></span></th>
+          <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Proposta ficará disponível para estudantes na fase onde eles deverão selecionar interesse"><span id="disponivel-icon"></span></th>
           <th scope="col" class="estados text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Foi formado um grupo de estudantes para essa proposta de projeto"><span id="fechado-icon"></span></th>
           <th scope="col" class="text-center">Proposta</th>
           {% if edicao == "todas" %}
@@ -306,6 +306,14 @@
 
       </table>
       </div>
+
+      {% if configuracao.liberadas_propostas %}
+        <span>Sistema liberado para estudantes verem propostas de projetos até: {{limite_propostas}}.</span>
+      {% else %}
+        <span>Sistema ainda não está liberado para estudantes verem propostas de projetos.</span>
+      {% endif %}<br>
+      
+      <span>Para liberar ou bloquear a visualização de prosposta pelos estudantes vá no menu <a href="{% url 'configurar' %}">configurar</a>.</span> 
 
       <p>&nbsp;</p>
       <strong>Número Total de Propostas Publicadas:</strong> 
