--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -181,14 +181,16 @@
       document.querySelector('#tudo').style.width = "1200px";  
       {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         // Escondendo informações
-        if($('#operacao').is(":not(:checked)")) {
+        if($('.lista_operacao').is(":hidden")) {
           $('#titulo_operacao').hide()
         }          
-        if($('#academico').is(":not(:checked)")) {
+        if($('.lista_academico').is(":hidden")) {
           $('#titulo_academico').hide()
         }
-        $('#operacao').hide()
-        $('#academico').hide()
+        if($('.lista_aulas').is(":hidden")) {
+          $('#titulo_aulas').hide()
+        }
+        carrega_semestre();
       {% endif %}
     }
 
@@ -196,14 +198,16 @@
         // Reajustando tela para visualização no browser
         document.querySelector('#tudo').style.width = "100%";
         {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-          if($('#operacao').is(":not(:checked)")) {
+          if($('.lista_operacao').is(":hidden")) {
             $('#titulo_operacao').show()
           }          
-          if($('#academico').is(":not(:checked)")) {
+          if($('.lista_academico').is(":hidden")) {
             $('#titulo_academico').show()
           }
-          $('#operacao').show()
-          $('#academico').show()
+          if($('.lista_aulas').is(":hidden")) {
+            $('#titulo_aulas').show()
+          }
+          carrega_semestre();
         {% endif %}
     }
 
@@ -215,7 +219,7 @@
 
   <div id="tudo">
 
-    <span class="titulo">Calendário de Eventos do PFE</span>
+    <span class="titulo">Calendário de Eventos</span>
     
     <div id='calendar' style="overflow-x: visible;"></div>
     
@@ -230,7 +234,6 @@
 
           {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
             <br>
-            <input type="checkbox" id="operacao" checked>
             <span class="tit_agenda" id="titulo_operacao" data-toggle="tooltip" data-html="true" animation="true" title=
             "O semestre da coordenação vai de Fevereiro à Julho e de Agosto a Janeiro">
               Operação
@@ -260,17 +263,15 @@
           {% endif %}
 
           <br>
-          {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-            <input type="checkbox" id="academico" checked>
-            <span class="tit_agenda" id="titulo_academico">
+          
+          <span class="tit_agenda" id="titulo_academico">
+            {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
               Acadêmico
-            </span>
             {% else %}
-            <span class="tit_agenda" id="titulo_academico">
               Eventos
-            </span>
-          {% endif %}
-
+            {% endif %}
+          </span>
+          
           <div id="lista_academico" class="lista_academico quad_pfe">
             {% if eventos %}
               {% nospaces %}
@@ -417,9 +418,6 @@
         <div id="bloco_aulas" class="col-xl-auto">
 
           <br>
-          {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-            <input type="checkbox" id="aulas" checked>
-          {% endif %}
           <span class="tit_agenda" id="titulo_aulas">Aulas</span>
 
           <span id="lista_aulas" class="lista_aulas">
@@ -955,10 +953,10 @@
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         function atualiza_visualizacao() {
           dataEventos = [];
-          if($('#operacao').is(':checked')) {
+          if(!($('.lista_operacao').is(":hidden"))) {
             dataEventos = dataEventos.concat(dataEventosOrganizacao);  
           }          
-          if($('#academico').is(':checked')) {
+          if(!($('.lista_academico').is(":hidden"))) {
             dataEventos = dataEventos.concat(dataEventosAcademicos);
             calendar.setCustomDayRenderer(dias_especiais);
           } else {
@@ -966,16 +964,16 @@
           }
           calendar.setDataSource(dataEventos);  // Variavel global calendar
         }
-        $('#operacao').click(function() {
-          $('.lista_operacao')[this.checked ? "show" : "hide"]();
+        $('#titulo_operacao').click(function() {
+          $('.lista_operacao')[$('.lista_operacao').is(":hidden") ? "show" : "hide"]();
           atualiza_visualizacao()
         });
-        $('#academico').click(function() {
-          $('.lista_academico')[this.checked ? "show" : "hide"]();
+        $('#titulo_academico').click(function() {
+          $('.lista_academico')[$('.lista_academico').is(":hidden") ? "show" : "hide"]();
           atualiza_visualizacao()
         });
-        $('#aulas').click(function() {
-          $('.lista_aulas')[this.checked ? "show" : "hide"]();
+        $('#titulo_aulas').click(function() {
+          $('.lista_aulas')[$('.lista_aulas').is(":hidden")  ? "show" : "hide"]();
           atualiza_visualizacao()
         });
     {% endif %}
