--- a/templates/save_image.html
+++ b/templates/save_image.html
@@ -17,6 +17,14 @@
       cursor: pointer;
     }
 
+    @media only screen and (max-width: 740px) {
+      .images {
+        -moz-transform:scale(0.8);
+        -webkit-transform:scale(0.8);
+        transform:scale(0.8);
+      }  
+    }
+
     .image:hover {
       background: #e7e7e7;
       background-color: none;
@@ -25,6 +33,8 @@
     .image:active {
       background-color: lightblue;
     }
+
+
 
 </style>
 
