--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -313,7 +313,7 @@
         <span>Sistema ainda não está liberado para estudantes verem propostas de projetos.</span>
       {% endif %}<br>
       
-      <span>Para liberar ou bloquear a visualização de prosposta pelos estudantes vá no menu <a href="{% url 'configurar' %}">configurar</a>.</span> 
+      <span>Para liberar ou bloquear a visualização de prosposta pelos estudantes vá no menu <a href="{% url 'publicar_propostas' %}">Publicar Propostas</a>.</span> 
 
       <p>&nbsp;</p>
       <strong>Número Total de Propostas Publicadas:</strong> 
