melhorando mensagem de reset

--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>Enviamos instruções por e-mail para redefinir sua senha.</p>
+  <p>Se este e-mail existir na base de dados, serão enviadas instruções para redefinir sua senha.</p>
+  <p>Para estudantes Insper, seu e-mail deve terminar em @al.insper.edu.br.</p>
+  <p>Para professores Insper, seu e-mail deve terminar em @insper.edu.br.</p>
 {% endblock %}
