--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -4,23 +4,34 @@
     Data: 20 de Fevereiro de 2022
 {% endcomment %}
 
+<style>
+  table {
+    border-collapse: collapse;
+    border: 0px;
+  }
+  td {
+    padding: 0px 6px 0px 6px;
+    border: 0px;
+  }
+</style>
+
 {% if projeto %}
+  <table class=" table-striped">
   {% for evento, relatos, avaliados in projeto.get_relatos %}
-    <p style="padding-left: 18px;">
-      <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
-        {{ forloop.counter }} - Relatos {{evento.endDate}}
-        {% for alocacao in alocacoes %}
+    <tr style="padding-left: 18px;">
+      
+        <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}">{{ forloop.counter }}</a></td>
+        <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}">Relatos {{evento.endDate}}</a></td>
+          <td>
+          {% for alocacao in alocacoes %}
           <small>
-              <span data-toggle="tooltip" data-html="true" animation="true" title="{{alocacao.aluno}}">
-              {% if alocacao.id in relatos %}
-                  &#9989;
-              {% else %}
-                  &#10060;
-              {% endif %}
+              <span style="width:20em;" id="s{{alocacao.aluno.id}}_e{{evento.id}}" data-toggle="tooltip" data-html="true" animation="true" title="{{alocacao.aluno}}">
+                {% if alocacao.id in relatos %}&#9989;{% else %}&#10060;{% endif %}
               </span>
-          </small>
+            </small>
         {% endfor %}
-        -
+        </td>
+        <td>
         {% if evento.em_prazo %}
           <span style="color:#edc300">Aguardando relatos</span>
         {% else %}
@@ -28,9 +39,13 @@
             {% if avaliados %}
                 <span style="color:green">Avaliado pelo orientador</span>
                 {% for avaliado in avaliados %}
-                  <span data-toggle="tooltip" data-html="true" animation="true" title="{{avaliado.1}}">
-                  {% if avaliado.0 %}&#x1F44D;{% else %}&#x1F44E;{% endif %}
-                  </span>
+                  <script>
+                    {% if avaliado.0 %}
+                      $("#s{{avaliado.1.id}}_e{{evento.id}}").html("&#x1F44D;");
+                    {% else %}
+                      $("#s{{avaliado.1.id}}_e{{evento.id}}").html("&#x1F44E;");
+                    {% endif %}
+                  </script>
                 {% endfor %}
             {% else %}
                 <span style="color:brown">Aguardando avaliação do orientador</span>
@@ -39,7 +54,7 @@
             <span style="color:red">Sem relatos dos estudantes</span>
           {% endif %}          
         {% endif %}
-      <a>
-    </p>
+      </td></tr>
   {% endfor %}
+</table>
 {% endif %}
